2010-02-01 S. Thiell <stephane.thiell@cea.fr>

	* Version 1.2 beta 2 released.

2010-02-01 A. Degremont  <aurelien.degremont@cea.fr>

	* NodeSet.py: Added __getslice__() and split() method to RangeSet.
	Added split() to NodeSet (trac ticket #18).

2010-02-01 S. Thiell <stephane.thiell@cea.fr>

	* NodeSet.py: Added equality comparisons for RangeSet and NodeSet. Fixed
	a bug in NodeSet.issuperset().

	* mkrpm.sh: Improve RPM build process and allow SRPM package to be
	easily rebuilt (trac ticket #51).

2010-01-31 S. Thiell <stephane.thiell@cea.fr>

	* scripts/clush.py: Fix broken pipe issue (trac ticket #34).

	* scripts/clush.py: Fix unhandled NodeSet parse error (trac ticket #36).

	* scripts/clush.py: Display uncompleted nodes on keyboard interrupt.

2010-01-29 S. Thiell <stephane.thiell@cea.fr>

	* scripts/clush.py: Return some error code when -S -u TIMEOUT is used
	and some command timeout occurred (trac ticket #48).

	* scripts/clush.py: Display output messages on KeyboardInterrupt (trac
	ticket #22).

	* tests/TaskThreadJoinTest.py: Added test cases for task.join().

	* tests/TaskThreadSuspendTest.py: Added test cases for
	task.suspend().

	* tests/TaskPortTest.py: Added test cases for task.port().

	* Task.py: Improved features in multithreaded environments thanks
	to new port feature: abort(), suspend(), resume(), schedule(), etc.
	are now thread-safe (trac ticket #21).

	* Worker/EngineClient.py: Added port feature, a way to communicate between
	different tasks.

2009-12-09 A. Degremont  <aurelien.degremont@cea.fr>

	* scripts/clush.py: Add -X flag to exclude node groups.
	  Node flags -w/-x/-g/-X can now be specified multiple times.

2009-12-17 S. Thiell <stephane.thiell@cea.fr>

	* Engine/Factory.py: Add engine automatic selection mechanism (trac
	ticket #10).

	* Task.py: Add task_terminate() function for convenience.

2009-12-15 S. Thiell <stephane.thiell@cea.fr>

	* scripts/clush.py: Fix clush -q/--quiet issue again!
